--- a/css/main.css
+++ b/css/main.css
@@ -1,19 +1,44 @@
+* {
+  box-sizing: border-box;
+}
+
 html{
   overflow-x: hidden; /*for deleting horizontal scroll*/
 }
 
 body {
   background-color: black;
-  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  font-family: CenturyGothic, sans-serif;
   margin-top: 50px;
   min-width: 320px;
   width: 100%;
 }
 
-/*@font-face {
+/*fonts connection*/
+@font-face {
   font-family: CenturyGothic;
-  src: url(fonts/gothic.ttf);
-}*/
+  src: url(../fonts/gothic/GOTHIC_0.ttf);
+}
+
+@font-face {
+  font-family: CenturyGothic;
+  src: url(fonts/gothic/GOTHICB_0.ttf);
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: CenturyGothic;
+  src: url(fonts/gothic/GOTHICI_0.ttf);
+  font-style: italic;
+}
+
+@font-face {
+  font-family: CenturyGothic;
+  src: url(fonts/gothic/GOTHICBI_0.ttf);
+  font-style: italic;
+  font-weight: bold;
+}
+
 h1, h2, h3, h4, h5, h6, p {
   color: white;
 }
@@ -25,10 +50,6 @@ ul li {
 ul{
   padding: 0px;
   margin: 0px;
-}
-
-* {
-  box-sizing: border-box;
 }
 
 .centered {
@@ -52,8 +73,6 @@ ul{
   padding-right: 165px;
   padding-left: 165px;
 }
-
-/*test*/
 
 .phones__nav{
   position: absolute;
@@ -84,15 +103,6 @@ ul{
   width: 80%;
   color: #fdcb32;
 }
-
-
-/*a.anchor:before{
-  display: block;
-  content: " ";
-  margin-top: -50px;
-  height: 50px;
-  visibility: hidden;
-}*/
 
 .navbar-nav > li.second > a {
 color: gold
@@ -134,13 +144,12 @@ color: gold
     background-color: rgba(255, 255, 255, 0);
 }
 .btn.button-one {
-/*    margin-bottom: 10px;*/
-    padding-top: 0px;
-    padding-bottom: 0px;
-    color: gold;
-    position: relative;
-    border: 3px solid #c69f1a;
-    transition: background 0.9s ease;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  color: gold;
+  position: relative;
+  border: 3px solid #c69f1a;
+  transition: background 0.9s ease;
 }
 
 .button-one:hover{
@@ -154,16 +163,16 @@ color: gold
 
 .btn.button-one
 i {
-    font-size: 2em;
-    padding: 0em 0.3em 0.2em 0em;
-    position: relative;
-    top: 0.07em;
+  font-size: 2em;
+  padding: 0em 0.3em 0.2em 0em;
+  position: relative;
+  top: 0.07em;
 }
 
 .btn.button-two {
-    color: greenyellow;
-    border: 3px solid greenyellow;
-    transition: background 0.9s ease;
+  color: greenyellow;
+  border: 3px solid greenyellow;
+  transition: background 0.9s ease;
 }
 
 .button-two:hover{
@@ -172,160 +181,158 @@ i {
 }
 
 .modal-content {
-    border-radius: 5px;
-    border: 1px #fdcb32 solid;
-    background: #202020;
+  border-radius: 5px;
+  border: 1px #fdcb32 solid;
+  background: #202020;
 }
 .modal-content > .modal-header > button {
-    color: #fdcb32;
-    opacity: 1;
+  color: #fdcb32;
+  opacity: 1;
 }
 .modal-header {
-    padding: 15px;
-    border-bottom: 1px solid #fdcb32;
+  padding: 15px;
+  border-bottom: 1px solid #fdcb32;
 }
 /*2 BLOCK*/
 #pro_tabir {
-    padding-top: 55px;
-    background: url(../img/Fon_9.jpg) no-repeat;
-    min-height: 644px;
-    background-size: cover;
+  padding-top: 55px;
+  background: url(../img/Fon_9.jpg) no-repeat;
+  min-height: 644px;
+  background-size: cover;
 }
 .text-block2_1 {
-    padding-bottom: 10px;
-    background: #fdcb32;
-    height: 100%;
+  padding-bottom: 10px;
+  background: #fdcb32;
+  height: 100%;
 }
 .text-block2_2 small {
-    color: white;
+  color: white;
 }
 .text-block2_2 img {
-    margin-top: -25px;
+  margin-top: -25px;
 }
 @media (max-width: 1200px) {
-.text-block2_2 img {
+  .text-block2_2 img {
     margin-top: 25px;
+  }
 }
- }
 .text-block2_2 h3 {
-    padding-top: 0px;
+  padding-top: 0px;
 }
 .text-block2_3 {
-    padding-bottom: 10px;
-    background: #fdcb32;
-    height: 100%;
+  padding-bottom: 10px;
+  background: #fdcb32;
+  height: 100%;
 }
 .text-innerblock2_1 h1, .text-innerblock2_1 h4, .text-block2_3 h1, .text-block2_3 h4 {
-    color: black;
+  color: black;
 }
 .text-innerblock2_1 h1, .text-block2_3 h1 {
-    font-weight: 600;
+  font-weight: 600;
 }
 .text-innerblock2_1 h1, .text-block2_3 h1 {
-    font-size: 30px;
+  font-size: 30px;
 }
 .text-innerblock2_1 h4, .text-block2_3 h4 {
-    font-size: 17px;
+  font-size: 17px;
 }
 table {
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-    width: 100%;
-    color: gold;
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+  width: 100%;
+  color: gold;
 }
 td, th {
-    font-weight: 600;
+  font-weight: 600;
 }
 .table > thead > tr > th, .table > tbody > tr > th, .table > tfoot > tr > th, .table > thead > tr > td, .table > tbody > tr > td, .table > tfoot > tr > td {
-    line-height: 1;
-    border-top: 0px;
-    border-bottom: 0px;
-    vertical-align:middle;
+  line-height: 1;
+  border-top: 0px;
+  border-bottom: 0px;
+  vertical-align:middle;
 }
 .table > thead > tr > th {
-    font-size: 24px;
-    text-align: center;
-    color: white;
+  font-size: 24px;
+  text-align: center;
+  color: white;
 }
 table tr, table th, table td {
-    /*font-size: 35px;*/
-    text-align: center;
+  text-align: center;
 
 }
 table th {
-    font-size: 18px;
+  font-size: 18px;
 }
 table th small {
-    font-size: 80%;
+  font-size: 80%;
 }
 table tr, table th, table td {
-    font-size: 17px;
+  font-size: 17px;
 }
 .table > thead > tr > th:ntn-child(1) {
   text-align: right;
 }
 .table-backdown td {
-    padding: 0em;
-    margin: 0em;
+  padding: 0em;
+  margin: 0em;
 }
 .table tbody tr td {
-    padding: 0.8em;
+  padding: 0.8em;
 }
 .table tbody tr td:nth-child(2) {
-    border-bottom: 2px dashed gold;
-    border-radius: 50%;
-/*    padding: -10%;*/
+  border-bottom: 2px dashed gold;
+  border-radius: 50%;
 }
 .table tbody tr td span:nth-child(1) {
-    border: 2px solid gold;
-    border-radius: 100%;
-    padding: 5px 10px;
+  border: 2px solid gold;
+  border-radius: 100%;
+  padding: 5px 10px;
 }
 .table tbody tr td:last-child(2) {
-    border-bottom: 0px;
+  border-bottom: 0px;
 }
 .table tbody tr td strong {
-    border: 1px solid gold;
-    padding: 0.2em;
-    margin-left: 0.5em;
+  border: 1px solid gold;
+  padding: 0.2em;
+  margin-left: 0.5em;
 }
 .table > tbody > tr > td > small {
-    position: relative;
-    bottom: 1em;
-    padding: 0.2em;
+  position: relative;
+  bottom: 1em;
+  padding: 0.2em;
 }
 .text-block2_4 p {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 .text-block2_4 p {
-    color: gold;
+  color: gold;
 }
 table {
-    font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
-  }
+  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
+}
 /*3 BLOCK*/
 #vas_ochikuye {
-    padding-top: 25px;
-    background: url(../img/Fon_3.jpg) no-repeat;
-    min-height: 644px;
-    background-size: cover;
+  padding-top: 25px;
+  background: url(../img/Fon_3.jpg) no-repeat;
+  min-height: 644px;
+  background-size: cover;
 }
 .block-icon {
-    border: 4px solid gold;
-    padding: 2em;
-    margin: 0em 2em;
+  border: 4px solid gold;
+  padding: 2em;
+  margin: 0em 2em;
 }
 .block-icon img{
-    height: 10em;
-    padding-bottom: 2em;
+  height: 10em;
+  padding-bottom: 2em;
 }
 .block3_1 {
-    padding-left: 2em;
+  padding-left: 2em;
 }
 .block3_1 p{
-    color: gold;
-    text-align: left;
-    font-weight: 600;
-    font-size: 1.1em;
+  color: gold;
+  text-align: left;
+  font-weight: 600;
+  font-size: 1.1em;
 }
 @media (max-width: 767px) {
   .block3_1 p{
@@ -334,14 +341,14 @@ table {
  }
 
 #rozporyadok {
-    padding-top: 90px;
-    min-height: 644px;
-		background: url(../img/photo_4.jpg) no-repeat center;
-		background-size: cover;
-		color: white;
-		font-size: 18px;
-		font-family: Century Gothic;
-    position: relative;
+  padding-top: 90px;
+  min-height: 644px;
+	background: url(../img/photo_4.jpg) no-repeat center;
+	background-size: cover;
+	color: white;
+	font-size: 18px;
+	font-family: Century Gothic;
+  position: relative;
 }
 
 .rozporyadok-text__wrapper-one{
@@ -389,14 +396,18 @@ table {
 }
 
 #aktyvnosti {
-		padding-top: 0px;
-		background: url(../img/fon12.jpg) no-repeat center;
-		background-size: cover;
-		color: white;
-		font-family: Century Gothic;
-    min-height: 500px;
-    z-index: 1;
+	padding-top: 0px;
+	background: url(../img/fon12.jpg) no-repeat center;
+	background-size: cover;
+	color: white;
+	font-family: Century Gothic;
+  min-height: 500px;
+  z-index: 1;
+}
 
+.activity__heading{
+  font-weight: bold;
+  letter-spacing: 3px;
 }
 /*.dotted {
    background: url(../img/border.png) no-repeat center;
@@ -408,18 +419,6 @@ table {
    padding-left: 55px;
    padding-right: 55px;*/
 }
-/*.dotted {
-    border-top: 4px dotted orange;
-    border-left: 4px dotted orange;
-    border-right: 4px dotted orange;
-    margin: 0 45px;
-}
-.dottedin{
-   border-bottom: 4px dotted orange;
-   border-left: 4px dotted orange;
-   border-right: 4px dotted orange;
-   margin: 0 45px;
-}*/
 .tilo{
 	width: 150px;
 	height: 150px;
@@ -643,7 +642,6 @@ table {
 
 .step__number{
   color: #fff;
-/*  font-family: "Century Gothic", CenturyGothic, AppleGothic, sans-serif;*/
   font-size: 6em;
 }
 
